# Pokemon-Champions-Analyzer

./: .dockerignore  .gitignore  .vercelignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  analyze_snippet.py  evaluate_variants.py  pyproject.toml  result.json  run_analysis.py  solution.py  task_run.py  task_script.py  vercel.json
.github/: dependabot.yml
api/: index.py
examples/: championsmeta_master_ball_ready_team.txt  realistic_grassy_terrain_team.txt  realistic_hyper_offense_team.txt  realistic_misty_terrain_team.txt  realistic_perish_trap_team.txt  realistic_sand_room_team.txt  realistic_sand_team.txt  realistic_snow_room_team.txt  realistic_sun_tailroom_team.txt  realistic_trick_room_team.txt  sample_team.txt
pokemon_team_analyzer/: __init__.py  analyzer.py  api.py  cache_paths.py  champions_m_a_data.py  champions_m_a_meta.py  champions_m_a_moves.py  champions_m_a_stats 2.py  champions_m_a_tournament_meta.py  champions_mega_abilities.py  champions_regulation_m_b_data.py  cli.py  damage.py  damage_benchmarks.py  data.py  glossary.py  meta_snapshots.py  models.py  preview.py  regulations.py  service.py  showdown.py  slot_doctor.py  speed_benchmarks.py  stats.py  typechart.py  version.py
pokemon_team_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_meta_snapshot.py  sync_version.py
tests/: test_analyzer.py  test_cache_paths.py  test_damage.py  test_data.py  test_example_teams.py  test_glossary.py  test_meta_ingest 2.py  test_meta_ingest.py  test_meta_snapshots.py  test_preview.py  (+3 more)
web/: README.md  (+6 more)
(+77 files in other folders)
