[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-team-analyzer"
dynamic = ["version"]
description = "Analyze Pokemon Showdown teams and export fixed-length feature vectors."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["beautifulsoup4>=4.12.3", "certifi>=2024.2.2", "fastapi>=0.117.1", "uvicorn>=0.35.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
pokemon-team-analyzer = "pokemon_team_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["pokemon_team_analyzer*"]

[tool.setuptools.dynamic]
version = { attr = "pokemon_team_analyzer.version.__version__" }

[tool.vercel]
entrypoint = "pokemon_team_analyzer.api:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
